sonarlint issues
* most changes due to package renaming testSupport -> testsupport